@@ -11,7 +11,9 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.RequestParam;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.logging.Logger;
 
 @Controller
@@ -29,59 +31,58 @@ public class UserController {
             @RequestParam(value = "allowedFields", required = false) List<String> allowedFields,
             Model model,
             HttpSession session) {
+
         if (session.getAttribute("user") == null) {
-            return "redirect:/login"; // Перенаправлення на логін, якщо користувач не аутентифікований
+            return "redirect:/login";
         }
+
         userService.setUserRoles(model, session);
 
         Keys currentUser = (Keys) session.getAttribute("user");
 
-        // Додаємо список доступних таблиць у модель
-        model.addAttribute("tables", getAvailableTables(currentUser));
+        Map<String, List<String>> tableColumns = getTableColumns();
 
-        // Перевіряємо позицію та таблицю, щоб показати додаткові поля для "оператора" та таблиці "бригади"
-        boolean showFields = "оператор".equals(position) && "brigade".equals(allowedTables);
+        model.addAttribute("tables", userService.getAvailableTables(currentUser));
+
+        boolean showFields = "оператор".equals(position) && tableColumns.containsKey(allowedTables);
         model.addAttribute("showFields", showFields);
 
-        // Додаємо необхідні поля для вибору, якщо потрібно
         if (showFields) {
-            model.addAttribute("fields", List.of("name", "siteId", "leaderId")); // Поля для таблиці "бригади"
+            model.addAttribute("fields", tableColumns.get(allowedTables));
         }
-
-        // Зберігаємо вибрані поля, якщо вони є
         String allowedFieldsStr = (allowedFields != null && !allowedFields.isEmpty()) ? String.join(",", allowedFields) : "";
         user.setAllowedFields(allowedFieldsStr);
 
         if (allowedTables != null && position != null && !allowedFieldsStr.isEmpty()) {
             userService.saveUser(user);
             return "redirect:/home";
+        } else if (allowedTables != null && position != null && (allowedFields == null || allowedFields.isEmpty())) {
+            userService.saveUser(user);
+            return "redirect:/home";
         }
 
-        // Повертаємо вже заповнені дані в модель, якщо є помилки
+
         model.addAttribute("user", user);
         model.addAttribute("allowedTables", allowedTables);
-        model.addAttribute("allowedFields", allowedFields); // Щоб зберегти вибрані поля
+        model.addAttribute("allowedFields", allowedFields);
 
-        return "userAdd"; // Повертаємося до форми з уже введеними даними
+        return "userAdd";
     }
 
 
-
-    public List<String> getAvailableTables(Keys currentUser) {
-        Logger logger = Logger.getLogger(getClass().getName());
-
-        if ("власник".equals(currentUser.getPosition())) {
-            List<String> allTables = Arrays.asList(currentUser.getAllowedTables().split(","));
-            logger.info("Власник: показуємо всі таблиці: " + allTables);
-            return allTables;
-        } else if ("адміністратор".equals(currentUser.getPosition()) && currentUser.getAllowedTables() != null) {
-            List<String> adminTables = Arrays.asList(currentUser.getAllowedTables().split(","));
-            logger.info("Адмін: дозволені таблиці: " + adminTables);
-            return adminTables;
-        }
-
-        logger.info("Немає дозволених таблиць для користувача " + currentUser.getPosition());
-        return List.of();
+    public Map<String, List<String>> getTableColumns() {
+        Map<String, List<String>> tableColumns = new HashMap<>();
+        tableColumns.put("building_management", List.of("name"));
+        tableColumns.put("category", List.of("name", "description"));
+        tableColumns.put("equipment", List.of("name", "type", "site_id"));
+        tableColumns.put("estimate", List.of("project_id", "material", "quantity", "cost"));
+        tableColumns.put("job_category", List.of("name", "description"));
+        tableColumns.put("project", List.of("name", "category_id", "site_id", "start_date", "end_date", "image"));
+        tableColumns.put("report", List.of("project_id", "work_type_id", "completion_date", "material", "used", "actual_cost"));
+        tableColumns.put("schedule", List.of("project_id", "work_type_id", "start_date", "end_date", "brigade_id", "site_id"));
+        tableColumns.put("site", List.of("name", "management_id", "location"));
+        tableColumns.put("work_type", List.of("name", "description"));
+        return tableColumns;
     }
 
 }
